--- a/Manual/Go.html
+++ b/Manual/Go.html
@@ -20,7 +20,7 @@
             <div class="page-content">
                 <img src="img/Component/goModule.svg" class="diagram">
                 <h2>On the Subject of Go</h2>
-                <p class="flavour-text">Flavor Text</p>
+                <p class="flavour-text">It's best you... go... defuse this bomb...?</p>
 
                 <p>
 				This module contains a Go board and varius black or white stones randomly placed around the board.
@@ -42,6 +42,7 @@
 					<li>Take the sixth digit of the serial number. This is the column in which the stone must be placed in. (from left to right)</li>
 					<li>If either number is zero, you may place the stone in any position of that row or column.</li>
 					<li>Place the stone in the desired position.</li>
+					<li>After the first stone has been placed, if you need to see whose turn it is, click on any stone, and the indicated player's stones will be highlighted.</li>
 				</ul>
 				 
 				<h3>Capturing stones</h3>
